--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,9 +4,14 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
         >
-    <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
+        <HorizontalScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
+            <ImageView
+                    android:id="@+id/imageView1"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:scaleType="center"/>
+        </HorizontalScrollView>
+    </ScrollView>
 </LinearLayout>
 
