--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,10 +4,11 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
         >
+    <TextView android:id="@+id/textViewDateTime" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
     <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
         <HorizontalScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
             <ImageView
-                    android:id="@+id/imageView1"
+                    android:id="@+id/imageViewRadar"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:scaleType="center"/>
